# oscomp-rebuild

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gdbinit.txt
cmake/: debug.cmake  filesystem.cmake
doc/: IO分层设计.md  address_space机制.md  vma.md  块大小不一致的处理.md  直接在页内进行io.md  缺页阻塞机制.md
include/: kernel.h
include/kernel/: config.h  elf.h  mmu.h  riscv.h  sched.h  trapframe.h  types.h  util.h  vfs.h
include/kernel/boot/: dtb.h
include/kernel/device/: block_device.h  blockdevice.h  buffer_head.h  virtio.h
include/kernel/drivers/: plic.h  virtio.h  virtio_device.h  virtio_mmio.h
include/kernel/fs/: ext4_adaptor.h  ramfs.h
include/kernel/fs/vfs/: dentry.h  fdtable.h  file.h  fstype.h  icache.h  inode.h  superblock.h  vfsmount.h
include/kernel/mm/: kmalloc.h  memlayout.h  mm_struct.h  mmap.h
include/kernel/sched/: cpu.h  mutex.h  process.h  sched.h  task.h
include/kernel/syscall/: syscall.h
include/kernel/util/: atomic.h  list.h  print.h  spinlock.h  sync_utils.h
include/lwext4/: ext4.h  ext4_balloc.h  ext4_bcache.h  ext4_bitmap.h  ext4_block_group.h  ext4_blockdev.h  ext4_crc32.h  ext4_debug.h  ext4_dir.h  ext4_dir_idx.h  ext4_errno.h  ext4_extent.h  ext4_fs.h  ext4_hash.h  ext4_ialloc.h  ext4_inode.h  ext4_journal.h  ext4_mbr.h  ext4_mkfs.h  ext4_super.h  ext4_trans.h  ext4_types.h  ext4_xattr.h
kernel/: CMakeLists.txt  kernel.c  kernel.lds  kernel.lds.bk  semaphore.c  time.c
kernel/arch/riscv/: dtb.c  entry.S  strap_vector.S
kernel/arch/riscv/boot/: boot.c  entry.S  head.S
kernel/device/: block_device.c  buffer_head.c  dev_interface.c  device.c  plic.c  virtio.c
kernel/drivers/: dtb.c  plic.c  virtio_device.c  virtio_disk.c  virtio_mmio.c
kernel/elf/: elf.c
kernel/fs/: ramfs.c
kernel/fs/ext4/: ext4_blockdev.c  ext4_fs.c  ext4_fstype.c  ext4_helper.c  ext4_inode.c  ext4_superblock.c
kernel/fs/vfs/: dentry.c  fdtable.c  file.c  fs_struct.c  fstype.c  icache.c  inode.c  path.c  superblock.c  vfs.c  vfsinit.c  vfsmount.c
kernel/mm/: init_mm.c  kmalloc.c  mm_struct.c  mmap.c  page.c  pagetable.c  slab.c  uaccess.c  vma.c
kernel/sched/: idle_task.c  mutex.c  pid.c  process.c  sched.c  signal.c  task.c
kernel/strap/: plic.h  strap.c
kernel/syscall/: clone.c  exit.c  getdents64.c  mmap.c  mount.c  openat.c  read.c  syscall.c  time.c  write.c
kernel/util/: hashtable.c  misc.c  print.c  qstr.c  string.c
script/: build-libfdt.sh  build_musl.sh  create_filesystem.sh  download_submodules.sh  install_busybox.sh  make-branch.sh  make_busybox.sh  setup.sh  simple_create_filesystem.sh
